# NTFS-Timestamp-Visualizer

./: .gitignore  README.md  forgery-states.txt  origin-states.txt  pyproject.toml  pytest.ini  requirements.txt  timestamp_visualizer.py
samples/forgery/: sample-input-with-forgery.txt
samples/normal/: sample-input.txt
src/: config.py  parser.py  tree.py  utils.py  visualizer.py
tests/: test_parser.py  test_tree.py
